--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jogos Vorazes</title>
-    <link rel="stylesheet" href="Index.css">
+    <link rel="stylesheet" href="/static/styles/Index.css">
 </head>
 <body>
 <header>
     <a href="index.html" class="logo">
-        <img src="img/logo.png" alt="Logo Jogos Vorazes">
+        <img src="/static/img/logo.png" alt="Logo Jogos Vorazes">
         <span class="logo-text">jogos Vorazes</span>
     </a>
 
     <nav>
-        <button class="btn-header" onclick="window.location.href='partições.html'">Distritos</button>
-        <button class="btn-header" onclick="window.location.href='arsenal.html'">Arsenal</button>
-        <button class="btn-header" onclick="window.location.href='monstruario.html'">Monstruário</button>
+        <button class="btn-header" onclick="window.location.href='/tamplates/partições.html'">Distritos</button>
+        <button class="btn-header" onclick="window.location.href='/tamplates/arsenal.html'">Arsenal</button>
+        <button class="btn-header" onclick="window.location.href='/tamplates/monstruario.html'">Monstruário</button>
     </nav>
 </header>
     <main class="container">
@@ -28,14 +28,14 @@
                 E lembre-se "quebre sua perna".
             </p>
             <div class="buttons-group">
-                <button class="btn-action" onclick="window.location.href='mestrelg.html'">Mestre</button>
-                <button class="btn-action" onclick="window.location.href='playerlg.html'">Jogador</button>
+                <button class="btn-action" onclick="window.location.href='/tamplates/mestrelg.html'">Mestre</button>
+                <button class="btn-action" onclick="window.location.href='/tamplates/playerlg.html'">Jogador</button>
             </div>
         </div>
 
         <div class="image-container">
             <div class="imagem-ilustrativa">
-                <img src="img/index/imagem ilustrativa index2.jpg" alt="Imagem Jogos Vorazes">
+                <img src="static/img/index/imagem ilustrativa index2.jpg" alt="Imagem Jogos Vorazes">
                 <span></span>
             </div>
         </div>
@@ -46,6 +46,6 @@
         <p class="copy">© 2024 Projeto baseado Jogos Vorazes - Desenvolvido por Chapeleiro</p>
     </footer>
 
-    <script src="Index.js"></script>
+    <script src="/static/js/Index.js"></script>
 </body>
 </html>
