--- a/tamplates/Mestre.html
+++ b/tamplates/Mestre.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Área do Mestre - Jogos de Purga</title>
-    <link rel="stylesheet" href="mestre.css">
+    <link rel="stylesheet" href="/static/styles/Mestre.css">
 </head>
 <body>
     <header>
-    <a href="index.html" class="logo">
-        <img src="img/logo.png" alt="Logo Jogos Vorazes">
+    <a href="/index.html" class="logo">
+        <img src="/static/img/logo.png" alt="Logo Jogos Vorazes">
         <span class="logo-text">jogos Vorazes</span>
     </a>
 
     <nav>
-        <button class="btn-header" onclick="window.location.href='partições.html'">Partições</button>
-        <button class="btn-header" onclick="window.location.href='arsenal.html'">Arsenal</button>
-        <button class="btn-header" onclick="window.location.href='monstruario.html'">Monstruário</button>
+        <button class="btn-header" onclick="window.location.href='/tamplates/partições.html'">Distritos</button>
+        <button class="btn-header" onclick="window.location.href='/tamplates/arsenal.html'">Arsenal</button>
+        <button class="btn-header" onclick="window.location.href='/tamplates/monstruario.html'">Monstruário</button>
     </nav>
 </header>
 
@@ -138,6 +138,6 @@
         </div>
     </div>
 
-    <script src="mestre.js"></script>
+    <script src="/static/js/mestre.js"></script>
 </body>
 </html>
