--- a/tamplates/mestrelg.html
+++ b/tamplates/mestrelg.html
@@ -5,21 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Mestre - Jogos Vorazes</title>
-<link rel="stylesheet" href="mestrelg.css">
+<link rel="stylesheet" href="/static/styles/mestrelg.css">
 </head>
 <body>
     <header>
-        <a href="index.html" class="logo">
-            <img src="img/logo.png" alt="Logo Jogos Vorazes">
-            <span class="logo-text">jogos Vorazes</span>
-        </a>
+    <a href="/index.html" class="logo">
+        <img src="/static/img/logo.png" alt="Logo Jogos Vorazes">
+        <span class="logo-text">jogos Vorazes</span>
+    </a>
 
-        <nav>
-            <button class="btn-header" onclick="window.location.href='partições.html'">Distritos</button>
-            <button class="btn-header" onclick="window.location.href='arsenal.html'">Arsenal</button>
-            <button class="btn-header" onclick="window.location.href='monstruario.html'">Monstruário</button>
-        </nav>
-    </header>
+    <nav>
+        <button class="btn-header" onclick="window.location.href='/tamplates/partições.html'">Distritos</button>
+        <button class="btn-header" onclick="window.location.href='/tamplates/arsenal.html'">Arsenal</button>
+        <button class="btn-header" onclick="window.location.href='/tamplates/monstruario.html'">Monstruário</button>
+    </nav>
+</header>
 
     <main>
         <div class="login-container">
@@ -94,6 +94,6 @@
     <footer>
         <p class="copy">© 2024 Projeto baseado Jogos Vorazes - Desenvolvido por Chapeleiro</p>
     </footer>
-    <script src="mestrelg.js"></script>
+    <script src="/static/js/mestrelg.js"></script>
 </body>
 </html>
