--- a/tamplates/partições.html
+++ b/tamplates/partições.html
@@ -4,20 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Distritos</title>
-    <link rel="stylesheet" href="partições.css">
+    <link rel="stylesheet" href="/static/styles/partições.css">
 </head>
 <body>
 
 <!-- HEADER -->
 <header>
-    <a href="index.html" class="logo">
-        <img src="img/logo.png" alt="Logo Jogos Vorazes">
+    <a href="/index.html" class="logo">
+        <img src="/static/img/logo.png" alt="Logo Jogos Vorazes">
         <span class="logo-text">jogos Vorazes</span>
     </a>
-        <nav>
-        <button class="btn-header active" onclick="window.location.href='partições.html'">Distritos</button>
-        <button class="btn-header" onclick="window.location.href='arsenal.html'">Arsenal</button>
-        <button class="btn-header" onclick="window.location.href='monstruario.html'">Monstruário</button>
+
+    <nav>
+        <button class="btn-header" onclick="window.location.href='/tamplates/partições.html'">Distritos</button>
+        <button class="btn-header" onclick="window.location.href='/tamplates/arsenal.html'">Arsenal</button>
+        <button class="btn-header" onclick="window.location.href='/tamplates/monstruario.html'">Monstruário</button>
     </nav>
 </header>
 
@@ -66,7 +67,7 @@
     <p class="copy">© 2024 Projeto baseado em Jogos Vorazes - Desenvolvido por Chapeleiro</p>
 </footer>
 
-<script src="partições.js"></script>
+<script src="/static/js/partições.js"></script>
 
 </body>
 </html>
