--- a/tamplates/register.html
+++ b/tamplates/register.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro - Arena dos Jogos</title>
-<link rel="stylesheet" href="register.css">
+<link rel="stylesheet" href="/static/styles/register.css">
 </head>
 <body>
     <header>
-    <a href="index.html" class="logo">
-        <img src="img/logo.png" alt="Logo Jogos Vorazes">
+    <a href="/index.html" class="logo">
+        <img src="/static/img/logo.png" alt="Logo Jogos Vorazes">
         <span class="logo-text">jogos Vorazes</span>
     </a>
-        <nav>
-        <button class="btn-header" onclick="window.location.href='partições.html'">Distritos</button>
-        <button class="btn-header" onclick="window.location.href='arsenal.html'">Arsenal</button>
-        <button class="btn-header" onclick="window.location.href='monstruario.html'">Monstruário</button>
+
+    <nav>
+        <button class="btn-header" onclick="window.location.href='/tamplates/partições.html'">Distritos</button>
+        <button class="btn-header" onclick="window.location.href='/tamplates/arsenal.html'">Arsenal</button>
+        <button class="btn-header" onclick="window.location.href='/tamplates/monstruario.html'">Monstruário</button>
     </nav>
 </header>
 
@@ -152,7 +153,7 @@
             </form>
 
             <div class="register-footer">
-                <p>Já possui uma conta? <a href="playerlg.html">Entre agora</a></p>
+                <p>Já possui uma conta? <a href="/playerlg.html">Entre agora</a></p>
             </div>
         </div>
     </main>
@@ -161,6 +162,6 @@
     <p></p>
     <p class="copy">© 2024 Projeto baseado Jogos Vorazes - Desenvolvido por Chapeleiro</p>
 </footer>
-<script src="register.js"></script>
+<script src="/static/js/register.js"></script>
 </body>
 </html>
