--- a/tamplates/Arsenal.html
+++ b/tamplates/Arsenal.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arsenal</title>
-    <link rel="stylesheet" href="arsenal.css">
+    <link rel="stylesheet" href="/static/styles/Arsenal.css">
 </head>
 <body>
 
 <!-- HEADER -->
 <header>
-    <a href="index.html" class="logo">
-        <img src="img/logo.png" alt="Logo Jogos Vorazes">
-        <span class="logo-text">Jogos Vorazes</span>
+    <a href="/index.html" class="logo">
+        <img src="/static/img/logo.png" alt="Logo Jogos Vorazes">
+        <span class="logo-text">jogos Vorazes</span>
     </a>
 
     <nav>
-        <button class="btn-header" onclick="window.location.href='partições.html'">Distrito</button>
-        <button class="btn-header active" onclick="window.location.href='arsenal.html'">Arsenal</button>
-        <button class="btn-header" onclick="window.location.href='monstruario.html'">Monstruário</button>
+        <button class="btn-header" onclick="window.location.href='/tamplates/partições.html'">Distritos</button>
+        <button class="btn-header" onclick="window.location.href='/tamplates/arsenal.html'">Arsenal</button>
+        <button class="btn-header" onclick="window.location.href='/tamplates/monstruario.html'">Monstruário</button>
     </nav>
 </header>
 
@@ -63,6 +63,6 @@
     <p class="copy">© 2024 Projeto baseado em Jogos Vorazes - Desenvolvido por Chapeleiro</p>
 </footer>
 
-<script src="arsenal.js"></script>
+<script src="/static/js/Arsenal.js"></script>
 </body>
 </html>
