--- a/tamplates/monstruario.html
+++ b/tamplates/monstruario.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Monstruário</title>
-    <link rel="stylesheet" href="monstruario.css">
+    <link rel="stylesheet" href="/static/styles/monstruario.css">
 </head>
 
 <body>
 
     <!-- HEADER -->
 <header>
-    <a href="index.html" class="logo">
-        <img src="img/logo.png" alt="Logo Jogos Vorazes">
-        <span class="logo-text">Jogos Vorazes</span>
+    <a href="/index.html" class="logo">
+        <img src="/static/img/logo.png" alt="Logo Jogos Vorazes">
+        <span class="logo-text">jogos Vorazes</span>
     </a>
 
     <nav>
-        <button class="btn-header" onclick="window.location.href='partições.html'">Distrito</button>
-        <button class="btn-header" onclick="window.location.href='arsenal.html'">Arsenal</button>
-        <button class="btn-header active" onclick="window.location.href='monstruario.html'">Monstruário</button>
+        <button class="btn-header" onclick="window.location.href='/tamplates/partições.html'">Distritos</button>
+        <button class="btn-header" onclick="window.location.href='/tamplates/arsenal.html'">Arsenal</button>
+        <button class="btn-header" onclick="window.location.href='/tamplates/monstruario.html'">Monstruário</button>
     </nav>
 </header>
 
@@ -57,6 +57,6 @@
     <p></p>
     <p class="copy">© 2024 Projeto baseado Jogos Vorazes - Desenvolvido por Chapeleiro</p>
 </footer>
-    <script src="monstruario.js"></script>
+    <script src="/static/js/monstruario.js"></script>
 </body>
 </html>
