--- a/tamplates/player.html
+++ b/tamplates/player.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Área do Jogador - Jogos de Purga</title>
-    <link rel="stylesheet" href="player.css">
+    <link rel="stylesheet" href="/static/styles/player.css">
 </head>
 <body>
     <header>
-        <a href="index.html" class="logo">
-            <img src="img/logo.png" alt="Logo Jogos Vorazes">
-            <span class="logo-text">jogos Vorazes</span>
-        </a>
+    <a href="/index.html" class="logo">
+        <img src="/static/img/logo.png" alt="Logo Jogos Vorazes">
+        <span class="logo-text">jogos Vorazes</span>
+    </a>
 
-        <nav>
-            <button class="btn-header" onclick="window.location.href='partições.html'">Partições</button>
-            <button class="btn-header" onclick="window.location.href='arsenal.html'">Arsenal</button>
-            <button class="btn-header" onclick="window.location.href='monstruario.html'">Monstruário</button>
-        </nav>
-    </header>
+    <nav>
+        <button class="btn-header" onclick="window.location.href='/tamplates/partições.html'">Distritos</button>
+        <button class="btn-header" onclick="window.location.href='/tamplates/arsenal.html'">Arsenal</button>
+        <button class="btn-header" onclick="window.location.href='/tamplates/monstruario.html'">Monstruário</button>
+    </nav>
+</header>
 
     <main>
         <div class="page-header">
@@ -257,6 +257,6 @@
         </div>
     </div>
 
-    <script src="player.js"></script>
+    <script src="/static/js/player.js"></script>
 </body>
 </html>
