--- a/tamplates/Arsenal.html
+++ b/tamplates/Arsenal.html
@@ -17,7 +17,7 @@
 
     <nav>
         <button class="btn-header" onclick="window.location.href='/tamplates/partições.html'">Distritos</button>
-        <button class="btn-header" onclick="window.location.href='/tamplates/arsenal.html'">Arsenal</button>
+        <button class="btn-header" onclick="window.location.href='/tamplates/Arsenal.html'">Arsenal</button>
         <button class="btn-header" onclick="window.location.href='/tamplates/monstruario.html'">Monstruário</button>
     </nav>
 </header>
