melhorias na parte principal e logo

--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jogos Vorazes</title>
     <link rel="stylesheet" href="/static/styles/Index.css">
+    <link rel="icon" type="image/png" href="static/img/1logo.png">
 </head>
 <body>
 <header>
+
     <a href="index.html" class="logo">
         <img src="/static/img/logo.png" alt="Logo Jogos Vorazes">
         <span class="logo-text">jogos Vorazes</span>
@@ -22,9 +24,9 @@
     <main class="container">
         <div class="content-text">
             <div class="titulo">Bem-vindo aos Jogos</div>
-            <h1 class="main-text">Explore o mundo de Circus</h1>
+            <h1 class="main-text">Explore o abismo dos jogos</h1>
             <p class="descricao">
-                Descubra as partições, conheça o arsenal dos tributos e explore as criaturas mortais da arena. 
+                Vasculhe os distritos, conheça o arsenal dos tributos e explore as criaturas soberanas da arena. 
                 E lembre-se "quebre sua perna".
             </p>
             <div class="buttons-group">
